[package]
name = "zigarg"
description = "zigarg is a very light argument parser written fully in Rust. It's composed only of a small number but very helpful lines and lacks a lot of features but suitable for many applications, especially personal or small projects. It's also good for educational purposes as it isn't very complex."
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/aldrinzigmundv/zigarg"
repository = "https://github.com/aldrinzigmundv/zigarg"
documentation = "https://docs.rs/zigarg"
readme = "README.md"
categories = ["command-line-interface"]
keywords = ["arguments", "parser", "cli", "args", "light"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
