[package]
name = "zigarg"
description = "zigarg is a very light argument parser written fully in Rust. It's not dependent on any third party libraries other than those that Rust already comes with. It lacks many features, like help generation, but enough to be suitable for a lot of applications. It's also good for educational purposes as it isn't very complex."
version = "0.2.5"
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/aldrinzigmundv/zigarg"
repository = "https://github.com/aldrinzigmundv/zigarg"
documentation = "https://docs.rs/zigarg"
readme = "README.md"
categories = ["command-line-interface"]
keywords = ["arguments", "parser", "cli", "args", "light"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
